--- a/structure.html
+++ b/structure.html
@@ -3,7 +3,7 @@
     <head>
       <h1>STRUCTURE OF HTML</h1>
       <body>
-        <img src="html.jpg" height="300px" width="300">
+        <img src="./html.jpg" height="300px" width="300">
         <div style="width: 100%;">
             <div align="center";>
                 <h1>BATTULA VANDANA</h1>
